# airbyte-sftp-csv

./: .gitignore  Dockerfile  README.md  main.py  metadata.yaml  pyproject.toml
destination_sftp_csv/: __init__.py  client.py  destination.py  spec.json
integration_tests/: integration_test.py
unit_tests/: unit_test.py
