[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
version = "0.0.1"
name = "destination_sftp_csv"
description = "Destination implementation for Sftp Csv."
authors = [ "Airbyte <contact@airbyte.io>",]
license = "MIT"
readme = "README.md"
[[tool.poetry.packages]]
include = "destination_sftp_csv"
[[tool.poetry.packages]]
include = "destination_azure_storage_csv"

[tool.poetry.dependencies]
python = "^3.10"
paramiko = "^3.5.0"
smart-open = "^7.0.5"
airbyte-cdk = "^6.22"
pandas = "^2.2.2"

[tool.poetry.scripts]
destination-sftp-csv = "destination_sftp_csv.run:run"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-docker = "^3.1.1"


[tool.poe]
include = [
    # Shared tasks definition file(s) can be imported here.
    # Run `poe` or `poe --help` to see the list of available tasks.
    "${POE_GIT_DIR}/poe-tasks/poetry-connector-tasks.toml",
]
